Bug fixes and small improvements: * Fixed: No link between tree and alignment if fasta header contains id and description (issue #1) * Fixed: index.html file as an HTML attribute type (issue #2) * Fixed: Load tree and msa files from 2 urls at the same time fails (issue #4) * Fixed issues with tree rendering (branchlength overflow, 0-length branches, name tag positioning, metadata Ensembl links) * Wasabi server: better handling of corrupt/missing metadata in analysis library

--- a/style.css
+++ b/style.css
@@ -608,7 +608,10 @@ div.buttonmenuwrap div.buttonmenu.righticn img.icn{
 	box-shadow: 0 0 10px white;
 }
 
-#tree>svg{ background-color: white; }
+#tree>svg{
+	background-color: white;
+	position: absolute;
+}
  
  #tree circle, #names text{
 	cursor: pointer;
@@ -745,6 +748,7 @@ div.buttonmenuwrap div.buttonmenu.righticn img.icn{
 	box-shadow: 3px 1px 2px rgba(0,0,0,0.4);
 }
 #namelabel span, #draggedlabel{
+	display: inline-block;
 	border-radius: 5px;	
 	background-color: white;
 	padding: 2px;
